--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
 
   <!-- FOOTER -->
   <footer>
-    <p>© 2025 UniTrack · Desarrollado por <strong>Angel Ramos . Julio Villa Real</strong></p>
+    <p>© 2025 UniTrack · Desarrollado por <strong>Angel Ramos .Santiago Villareal</strong></p>
   </footer>
 
   <script>
