--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
   
   <main class="main-content">
     <section class="block">
-      <h2>💡 Problema identificado</h2>
+      <h2>Problema identificado</h2>
       <p>
         Estudiantes con múltiples materias pierden fechas importantes y tienen dificultades para priorizar tareas,
         lo que afecta su rendimiento académico y aumenta el estrés.
@@ -47,12 +47,12 @@
     </section>
 
     <section class="block">
-      <h2>🎯 Objetivo general</h2>
+      <h2> Objetivo general</h2>
       <p>Crear una aplicación web que facilite la organización académica y la gestión del tiempo de los estudiantes.</p>
     </section>
 
     <section class="block">
-      <h2>📌 Objetivos específicos</h2>
+      <h2> Objetivos específicos</h2>
       <ul>
         <li>Registrar tareas y eventos con fecha y hora.</li>
         <li>Sincronizar con Google Calendar para recordatorios automáticos.</li>
@@ -62,12 +62,12 @@
     </section>
 
     <section class="block">
-      <h2>🧭 Misión</h2>
+      <h2> Misión</h2>
       <p>Facilitar la organización del estudiante mediante una herramienta accesible, visual y confiable.</p>
     </section>
 
     <section class="block">
-      <h2>🌟 Visión</h2>
+      <h2> Visión</h2>
       <p>Ser referente en soluciones académicas simples y eficaces que mejoren el desempeño estudiantil.</p>
     </section>
 
